RESOLVED FIXED220948
ASSERT NOT REACHED in WebCore::DisplayList::isDrawingItem
https://bugs.webkit.org/show_bug.cgi?id=220948
Summary ASSERT NOT REACHED in WebCore::DisplayList::isDrawingItem
Ryan Haddad
Reported 2021-01-25 14:31:15 PST
The new test added with https://trac.webkit.org/changeset/271757/webkit is consistently failing a debug assertion: TestWebKitAPI.DisplayListTests.OutOfLineItemDecodingFailure SHOULD NEVER BE REACHED ./platform/graphics/displaylists/DisplayListItemType.cpp(240) : bool WebCore::DisplayList::isDrawingItem(WebCore::DisplayList::ItemType) 1 0x1084284a9 WTFCrash 2 0x12595f04b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x129ebfb94 WebCore::DisplayList::isDrawingItem(WebCore::DisplayList::ItemType) 4 0x129ea47fb WebCore::DisplayList::DisplayList::iterator::updateCurrentItem() 5 0x129ea4cbc WebCore::DisplayList::DisplayList::iterator::advance() 6 0x129ea08c5 WebCore::DisplayList::DisplayList::iterator::operator++() 7 0x129eba63a WebCore::DisplayList::Replayer::replay(WebCore::FloatRect const&, bool) 8 0x105c0d112 TestWebKitAPI::DisplayListTests_OutOfLineItemDecodingFailure_Test::TestBody() 9 0x106545284 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 10 0x1065134eb void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 11 0x106513426 testing::Test::Run() 12 0x10651457a testing::TestInfo::Run() 13 0x1065153c4 testing::TestCase::Run() 14 0x106520a88 testing::internal::UnitTestImpl::RunAllTests() 15 0x10654a614 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 16 0x10652057b bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 17 0x10652044d testing::UnitTest::Run() 18 0x1062be991 RUN_ALL_TESTS() 19 0x1062be922 TestWebKitAPI::TestsController::run(int, char**) 20 0x1064de0c5 main 21 0x7fff2038e621 start https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.DisplayListTests.OutOfLineItemDecodingFailure
Attachments
Patch (5.06 KB, patch)
2021-01-25 15:18 PST, Wenson Hsieh
no flags
Patch (5.06 KB, patch)
2021-01-25 15:20 PST, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-25 14:31:40 PST
Wenson Hsieh
Comment 2 2021-01-25 15:18:55 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2021-01-25 15:20:19 PST
EWS
Comment 4 2021-01-25 17:30:10 PST
Committed r271871: <https://trac.webkit.org/changeset/271871> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418341 [details].
Note You need to log in before you can comment on or make changes to this bug.